--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Server=localhost;DataBase=TaferaDB;Uid=root;Pwd=Banana123."
+    "DefaultConnection":"Server=localhost;DataBase=tarefadb;Uid=root;Pwd=Banana123."
   },
   "AllowedHosts": "*"
 }
